CHANGES IN FLTK 1.1.0

	- The newest Cygwin needs the same scandir() handling as
	  HP-UX.
	- FLUID didn't register the image formats in the
	  fltk_images library, and had some other image
	  management problems.
	- Fixed one more redraw bug in Fl_Browser_ where we
	  weren't using the box function to erase empty space in
	  the list.
	- Fl_Text_Display::buffer() now calls resize() to show
	  the buffer.
	- Fl_Help_View didn't support HTML comments.
	- Fl_Help_View didn't include the extra cellpadding when
	  handling colspan attributes in cells.
	- Fl_Help_View didn't support table alignment.


CHANGES IN FLTK 1.1.0rc6

	- Documentation updates.
	- Fl::handle() didn't apply the modal tests for
	  FL_RELEASE events, which caused Fl_Tabs to allow users
	  to change tabs even when a modal window was open.
	- Fl_Browser_, Fl_Input_, Fl_Slider now use the box
	  function to erase the background.  This fixes some
	  long-standing redraw problems.
	- More snprintf/strlcpy/strlcat changes where needed.
	- Fl::get_font_name() would leak 128 bytes.
	- Eliminated most of the "shadowed" variables to avoid
	  potential problems with using the wrong copy of "foo"
	  in a class method.
	- Moved Fl_BMP_Image, Fl_GIF_Image, and Fl_PNM_Image to
	  the fltk_images library, so the only image formats
	  that are supported by the core library are XBM and XPM
	  files.  This reduces the size of the FLTK core library
	  by about 16k...
	- The Fl_Text_Display::resize() method was incorrectly
	  flagged as protected.
	- Fixed some memory/initialization bugs in
	  Fl_File_Chooser that valgrind caught.
	- The PNG library png_read_destroy() is deprecated and
	  does not free all of the memory allocated by
	  png_create_read_struct(). This caused a memory leak in
	  FLTK apps that loaded PNG images.
	- Added uncache() method to Fl_Image and friends.
	- Added image() methods to Fl_Menu_Item.
	- Added default_cursor() method and data to Fl_Window.