@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.0
 
+	- DND events were being sent to the target window
+	  instead of the target widget under WIN32.
 	- The newest Cygwin needs the same scandir() handling as
 	  HP-UX.
 	- FLUID didn't register the image formats in the
